# netDisk

./: .gitignore  README.md  keyword  test1
client/: cli  cli.c
data/: cntest.txt  entest.txt
data/dict/: stop_words.utf8
data/textdata/: a.txt  b.txt
include/: DictProducer.h  EchoServer.h  TcpConnection.h  TcpServer.h  WordQuery.h  WordSegmenter.h
server/conf/: server.conf
server/include/: func.h  server.h  taskQueue.h  transfer.h
server/src/: ser  server.c  transfer.c
server_c/include/: command.h  factory.h
server_c/src/: command.c  factory.c  takeQueue.c
server_c_protope_old/src/: ls
src/: DictProducer.cpp  TcpConnection.cc  TestEchoServer.cc  Thread.cc  WordQuery.cpp  WordSegmenter.cc
test/: CMakeLists.txt  a.out  test.cpp  test2.cpp  test3.cpp
